migration-result/docs/ver/13.x/access-controls/access-request-plugins/ssh-approval-email.mdx
---
title: Teleport Access Requests with Email
description: How to set up the Teleport email plugin to notify users when another user requests elevated privileges.
version: "13.x"
---

This guide will explain how to set up Teleport to send Just-in-Time Access
Request notifications to users via email. Since all organizations use email for
at least some of their communications, Teleport's email plugin makes it
straightforward to integrate Access Requests into your existing workflows,
letting you implement security best practices without compromising productivity.

<img src="/assets/email-a1dfa0ad44.png" alt="The email Access Request plugin" width="1800" height="666" />

## Prerequisites

<Tabs>
  <Tab title="Self-Hosted Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see the Enterprise [Getting
      Started](/docs/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.4.16.
      You can download these tools by visiting your [Teleport account](https://teleport.sh).
      You can verify the tools you have installed by running the following commands:

      ```bash
      $ tctl version
      # Teleport Enterprise v13.4.16 go1.21

      $ tsh version
      # Teleport v13.4.16 go1.21
      ```
  </Tab>

  <Tab title="Teleport Enterprise Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The `tctl` admin tool and `tsh` client tool version >= 14.3.6.
      To download these tools, visit the [Downloads](/docs/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```bash
      $ tctl version
      # Teleport Enterprise v14.3.6 go1.21

      $ tsh version
      # Teleport v14.3.6 go1.21
      ```
  </Tab>
</Tabs>

- Access to an SMTP service. The Teleport email plugin supports either Mailgun
  or a generic SMTP service that authenticates via username and password.
- Either a Linux host or Kubernetes cluster where you will run the email plugin.

<Warning>
  <p>
    **Protecting your email account**
  </p>

  The Teleport plugin needs to use a username and password to authenticate to your
  SMTP service. To mitigate the risk of these credentials being leaked, you should
  set up a dedicated email account for the Teleport plugin and rotate the password
  regularly.
</Warning>

- Make sure you can connect to your Teleport cluster by authenticating with `tsh`
  so you can execute commands with the `tctl` admin tool:
  <Tabs>
    <Tab title="Self-Hosted">
      ```bash
      $ tsh login --proxy=teleport.example.com --user=email@example.com
      $ tctl status
      # Cluster  teleport.example.com
      # Version  13.4.16
      # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
      ```

      You can run subsequent `tctl` commands in this guide on your local machine.

      For full privileges, you can also run `tctl` commands on your Teleport Auth
      Service host.
    </Tab>

    <Tab title="Teleport Cloud">
      ```bash
      $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
      $ tctl status
      # Cluster  myinstance.teleport.sh
      # Version  14.3.6
      # CA pin   sha256:sha-hash-here
      ```

      You must run subsequent `tctl` commands in this guide on your local machine.
    </Tab>
  </Tabs>

## Step 1/7. Define RBAC resources

Before you set up the email plugin, enable Role Access Requests in your Teleport cluster.

For the purpose of this guide, we will define an `editor-requester` role, which
can request the built-in `editor` role, and an `editor-reviewer` role that can
review requests for the `editor` role.

Create a file called `editor-request-rbac.yaml` with the following content:

```yaml
kind: role
version: v5
metadata:
  name: editor-reviewer
spec:
  allow:
    review_requests:
      roles: ['editor']
---
kind: role
version: v5
metadata:
  name: editor-requester
spec:
  allow:
    request:
      roles: ['editor']
      thresholds:
        - approve: 1
          deny: 1
```

Create the roles you defined:

```bash
$ tctl create -f editor-request-rbac.yaml
role 'editor-reviewer' has been created
role 'editor-requester' has been created
```

Allow yourself to review requests by users with the `editor-requester` role by
assigning yourself the `editor-reviewer` role.

Assign the `editor-reviewer` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```bash
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `editor-reviewer` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - editor-reviewer 
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```bash
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `editor-reviewer` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```bash
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `editor-reviewer` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```bash
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `editor-reviewer` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - editor-reviewer
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

Create a user called `myuser` who has the `editor-requester` role. This user
cannot edit your cluster configuration unless they request the `editor` role:

```bash
$ tctl users add myuser --roles=editor-requester 
```

`tctl` will print an invitation URL to your terminal. Visit the URL and log in
as `myuser` for the first time, registering credentials as configured for your
Teleport cluster.

Later in this guide, you will have `myuser` request the `editor` role so you can
review the request using the Teleport plugin.

## Step 2/7. Install the Teleport email plugin

<Accordion title="Using a local SMTP server?">
  If you are using a local SMTP server to test the plugin, you should install the
  plugin on your local machine to ensure the plugin can connect to the SMTP server
  and perform any necessary DNS lookups to send email.

  Your Teleport cluster does *not* need to perform DNS lookups for your plugin
  because the plugin dials out to the Teleport Proxy Service or Teleport Auth Service.
</Accordion>

<Tabs>
  <Tab title="Download">
    We currently only provide `linux-amd64` binaries. You can also compile these
    plugins from source. You can run the plugin from a remote host or your local
    development machine.

    ```bash
    $ curl -L -O https://get.gravitational.com/teleport-access-email-v13.3.8-linux-amd64-bin.tar.gz
    $ tar -xzf teleport-access-email-v13.3.8-linux-amd64-bin.tar.gz
    $ cd teleport-access-email
    $ sudo ./install
    ```

    Make sure the binary is installed:

    ```bash
    $ teleport-email version
    teleport-email v13.3.8 git:teleport-email-v13.3.8-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Docker Image">
    We currently only provide Docker images for `linux-amd64`.
    Pull the Docker image for the latest access request plugin by running the following command:

    ```bash
    $ docker pull public.ecr.aws/gravitational/teleport-plugin-email:13.3.8
    ```

    Make sure the plugin is installed by running the following command:

    ```bash
    $ docker run public.ecr.aws/gravitational/teleport-plugin-email:13.3.8 version
    teleport-email v13.3.8 git:teleport-email-v13.3.8-fffffffff 1.21
    ```

    For a list of available tags, visit [Amazon ECR Public Gallery](https://gallery.ecr.aws/gravitational/teleport-plugin-email).
  </Tab>

  <Tab title="From Source">
    To install from source you need `git` and `go` installed. If you do not have Go
    installed, visit the Go [downloads page](https://go.dev/dl/).

    ```bash
    $ git clone https://github.com/gravitational/teleport-plugins.git
    $ cd teleport-plugins/access/email
    $ make
    ```

    Move the `teleport-email` binary into your PATH.

    Make sure the binary is installed:

    ```bash
    $ teleport-email version
    teleport-email v13.3.8 git:teleport-email-v13.3.8-fffffffff go1.21
    ```
  </Tab>

  <Tab title="Helm Chart">
    {/*TODO: Replace this with the following partial once we fix
    gravitational/docs#299:
    docs/pages/kubernetes-access/helm/includes/helm-repo-add.mdx*/}

    Allow Helm to install charts that are hosted in the Teleport Helm repository:

    ```bash
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    Update the cache of charts from the remote repository:

    ```bash
    $ helm repo update
    ```
  </Tab>
</Tabs>

## Step 3/7. Create a user and role for the plugin

Teleport's Access Request plugins authenticate to your Teleport cluster as a
user with permissions to list and read Access Requests. This way, plugins can
retrieve Access Requests from the Teleport Auth Service and present them to
reviewers.

Define a user and role called `access-plugin` by adding the following content to
a file called `access-plugin.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin
spec:
  allow:
    rules:
      - resources: ['access_request']
        verbs: ['list', 'read']
      - resources: ['access_plugin_data']
        verbs: ['update']
---
kind: user
metadata:
  name: access-plugin
spec:
  roles: ['access-plugin']
version: v2
```

Create the user and role:

```bash
$ tctl create -f access-plugin.yaml
```

As with all Teleport users, the Teleport Auth Service authenticates the
`access-plugin` user by issuing short-lived TLS credentials. In this case, we
will need to request the credentials manually by *impersonating* the
`access-plugin` role and user.

If you are running a self-hosted Teleport Enterprise deployment and are using
`tctl` from the Auth Service host, you will already have impersonation
privileges.

To grant your user impersonation privileges for `access-plugin`, define a role
called `access-plugin-impersonator` by pasting the following YAML document into
a file called `access-plugin-impersonator.yaml`:

```yaml
kind: role
version: v5
metadata:
  name: access-plugin-impersonator
spec:
  allow:
    impersonate:
      roles:
      - access-plugin
      users:
      - access-plugin
```

Create the `access-plugin-impersonator` role:

```bash
$ tctl create -f access-plugin-impersonator.yaml
```

Assign the `access-plugin-impersonator` role to your Teleport user by running the appropriate
commands for your authentication provider:

<Tabs>
  <Tab title="Local User">
    1. Retrieve your local user's configuration resource:

       ```bash
       $ tctl get users/$(tsh status -f json | jq -r '.active.username') > out.yaml
       ```

    2. Edit `out.yaml`, adding `access-plugin-impersonator` to the list of existing roles:

       ```diff
         roles:
          - access
          - auditor
          - editor
       +  - access-plugin-impersonator 
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f out.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="GitHub">
    1. Retrieve your `github` authentication connector:

       ```bash
       $ tctl get github/github --with-secrets > github.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `github.yaml` file. Because this key contains a sensitive value, you should remove the
       github.yaml file immediately after updating the resource.

    2. Edit `github.yaml`, adding `access-plugin-impersonator` to the `teams_to_roles` section.

       The team you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the team must include your user account and
       should be the smallest team possible within your organization.

       Here is an example:

       ```diff
         teams_to_roles:
           - organization: octocats
             team: admins
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f github.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="SAML">
    1. Retrieve your `saml`  configuration resource:

       ```bash
       $ tctl get --with-secrets saml/mysaml > saml.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `saml.yaml` file. Because this key contains a sensitive value, you should remove the
       saml.yaml file immediately after updating the resource.

    2. Edit `saml.yaml`, adding `access-plugin-impersonator` to the `attributes_to_roles` section.

       The attribute you should map to this role depends on how you have designed your
       organization's role-based access controls (RBAC). However, the group must include your
       user account and should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         attributes_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f saml.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>

  <Tab title="OIDC">
    1. Retrieve your `oidc`  configuration resource:

       ```bash
       $ tctl get oidc/myoidc --with-secrets > oidc.yaml
       ```

       Note that the `--with-secrets` flag adds the value of `spec.signing_key_pair.private_key`
       to the `oidc.yaml` file. Because this key contains a sensitive value, you should remove the
       oidc.yaml file immediately after updating the resource.

    2. Edit `oidc.yaml`, adding `access-plugin-impersonator` to the `claims_to_roles` section.

       The claim you should map to this role depends on how you have designed your organization's
       role-based access controls (RBAC). However, the group must include your user account and
       should be the smallest group possible within your organization.

       Here is an example:

       ```diff
         claims_to_roles:
           - name: "groups"
             value: "my-group"
             roles:
               - access
       +       - access-plugin-impersonator
       ```

    3. Apply your changes:

       ```bash
       $ tctl create -f oidc.yaml
       ```

    4. Sign out of the Teleport cluster and sign in again to assume the new role.
  </Tab>
</Tabs>

You will now be able to generate signed certificates for the `access-plugin`
role and user.

## Step 4/7. Export the access plugin identity

Like all Teleport users, `access-plugin` needs signed credentials in
order to connect to your Teleport cluster. You will use the `tctl auth sign`
command to request these credentials for your plugin.

The following `tctl auth sign` command impersonates the `access-plugin` user,
generates signed credentials, and writes an identity file to the local
directory:

```bash
$ tctl auth sign --user=access-plugin --out=auth.pem
```

The plugin connects to the Teleport Auth Service's gRPC endpoint over TLS.

The identity file, `auth.pem`, includes both TLS and SSH credentials. The plugin
uses the SSH credentials to connect to the Proxy Service, which establishes a
reverse tunnel connection to the Auth Service. The plugin uses this reverse
tunnel, along with your TLS credentials, to connect to the Auth Service's gRPC
endpoint.

You will refer to this file later when configuring the plugin.

<Note>
  <p>
    **Certificate Lifetime**
  </p>

  By default, `tctl auth sign` produces certificates with a relatively short
  lifetime. For production deployments, we suggest using [Machine
  ID](/docs/ver/13.x/machine-id/introduction) to programmatically issue and renew
  certificates for your plugin. See our Machine ID [getting started
  guide](/docs/ver/13.x/machine-id/getting-started) to learn more.

  Note that you cannot issue certificates that are valid longer than your existing credentials.
  For example, to issue certificates with a 1000-hour TTL, you must be logged in with a session that is
  valid for at least 1000 hours. This means your user must have a role allowing
  a `max_session_ttl` of at least 1000 hours, and you must specify a `--ttl`
  when logging in:

  ```bash
  $ tsh login --proxy=teleport.example.com --ttl=1001h
  ```
</Note>

<Tabs>
  <Tab title="Virtual Machine">
    The rest of this guide assumes that you have placed any files generated by this
    command into `/var/lib/teleport/plugins/email` for later reference when
    configuring the plugin:

    ```bash
    # create a data directory to hold certificate files for the plugin.
    $ sudo mkdir -p /var/lib/teleport/plugins/email
    $ sudo mv auth.* /var/lib/teleport/plugins/email
    ```
  </Tab>

  <Tab title="Kubernetes">
    Create a Kubernetes secret that contains the Teleport identity file:

    ```bash
    $ kubectl -n teleport create secret generic --from-file=auth.pem teleport-plugin-email-identity
    ```
  </Tab>
</Tabs>

## Step 5/7. Configure the plugin

At this point, you have generated credentials that the email plugin will use to
connect to Teleport. You will now configure the plugin to use these credentials
to receive Access Request notifications from Teleport and email them to your
chosen recipients.

### Create a config file

<Tabs>
  <Tab title="Executable or Docker">
    The Teleport email plugin uses a configuration file in TOML format. Generate a
    boilerplate configuration by running the following command:

    ```bash
    $ teleport-email configure | sudo tee /etc/teleport-email.toml
    ```
  </Tab>

  <Tab title="Helm Chart">
    The email plugin Helm Chart uses a YAML values file to configure the plugin.
    On your local workstation, create a file called `teleport-email-helm.yaml`
    based on the following example:

    ```yaml
    teleport:
      address: teleport.example.com:443
      identitySecretName: ""
      identitySecretName: teleport-plugin-email-identity

    mailgun:
      enabled: false
      domain: ""
      privateKey: ""
      privateKeyFromSecret: ""
      privateKeySecretPath: "mailgunPrivateKey"

    smtp:
      enabled: false
      host: ""
      port: 587
      username: ""
      password: ""
      passwordFromSecret: ""
      passwordSecretPath: "smtpPassword"
      starttlsPolicy: "mandatory"

    delivery:
      sender: ""
      recipients: []

    roleToRecipients: {}

    secretVolumeName: "password-file"

    ```
  </Tab>
</Tabs>

### Edit the configuration file

Edit the configuration file for your environment. We will show you how to set
each value below.

### `[teleport]`

<Tabs>
  <Tab title="Executable or Docker">
    **`addr`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identity`**: Fill this in with the path to the identity file you exported
    earlier.

    **`client_key`**, **`client_crt`**, **`root_cas`**: Comment these out, since we
    are not using them in this configuration.
  </Tab>

  <Tab title="Helm Chart">
    **`address`**: Include the hostname and HTTPS port of your Teleport Proxy Service
    or Teleport Enterprise Cloud tenant (e.g., `teleport.example.com:443` or
    `mytenant.teleport.sh:443`).

    **`identitySecretName`**: Fill in the `identitySecretName` field with the name
    of the Kubernetes secret you created earlier.
  </Tab>
</Tabs>

### `[mailgun]` or `[smtp]`

Provide the credentials for your SMTP service depending on whether you are using
Mailgun or SMTP service.

<Tabs>
  <Tab title="Mailgun">
    If you are deploying the email plugin on a Linux host:

    1. In the `mailgun` section, assign `domain` to the domain name and subdomain of
       your Mailgun account.
    2. Assign `mailgun.private_key` to your Mailgun private key.

    If you are deploying the email plugin on Kubernetes:

    1. Write your Mailgun private key to a local file called `mailgun-private-key`.
    2. Create a Kubernetes secret from the file:

    ```bash
    $ kubectl -n teleport create secret generic mailgun-private-key --from-file=mailgun-private-key
    ```

    1. Assign `mailgun.privateKeyFromSecret` to `mailgun-private-key`.
  </Tab>

  <Tab title="Generic SMTP Service">
    Assign `host` to the fully qualified domain name of your SMTP service, omitting
    the URL scheme and port. (If you're using a local SMTP server for testing, use
    `"localhost"` for `host`.) Assign `port` to the port of your SMTP service.

    If you are running the email plugin on a Linux host, fill in `username` and
    `password`.

    <Tip>
      You can also save your password to a separate file and assign `password_file` to
      the file's path. The plugin reads the file and uses the file's content as the
      password.
    </Tip>

    If you are deploying the email plugin on Kubernetes:

    1. Write your SMTP service's password a local file called `smtp-password.txt`.
    2. Create a Kubernetes secret from the file:

    ```bash
    $ kubectl -n teleport create secret generic smtp-password --from-file=smtp-password
    ```

    1. Assign `smtp.passwordFromSecret` to `smtp-password`.

    <Accordion title="Disabling TLS for testing">
      If you are testing the email plugin against a trusted internal SMTP server where
      you would rather not use TLS—e.g., a local SMTP server on your development
      machine—you can assign the `starttls_policy` setting to `disabled` (always
      disable TLS) or `opportunistic` (disable TLS if the server does not advertise
      the `STARTTLS` extension). The default is to always enforce TLS, and you should
      leave this setting unassigned unless you know what you are doing and understand
      the risks.

      For Kubernetes deployments, `starttls_policy` is called `smtp.starttlsPolicy` in
      the Helm values file for the email plugin.
    </Accordion>
  </Tab>
</Tabs>

### `[delivery]`

Assign `sender` to the email address from which you would like the Teleport
plugin to send messages.

### `[role_to_recipients]`

The `role_to_recipients` map (`roleToRecipients` for Helm users) configures the
recipients that the email plugin will notify when a user requests access to a
specific role. When the plugin receives an Access Request from the Auth Service,
it will look up the role being requested and identify the recipients to notify.

Here is an example of a `role_to_recipients` map:

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    [role_to_recipients]
    "*" = ["security@example.com", "executive-team@example.com"]
    "dev" = "eng@example.com"
    "dba" = "mallory@example.com"
    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    roleToRecipients:
      "*": ["security@example.com", "executive-team@example.com"]
      "dev": "eng@example.com"
      "dba": "mallory@example.com"
    ```
  </Tab>
</Tabs>

In the `role_to_recipients` map, each key is the name of a Teleport role. Each
value configures the recipients the plugin will email when it receives an Access
Request for that role. The value can be a single string or an array of strings.
Each string must be an email address.

The `role_to_recipients` map must also include an entry for `"*"`, which the
plugin looks up if no other entry matches a given role name. In the example
above, requests for roles aside from `dev` and `dba` will notify
`security@example.com` and `executive-team@example.com`.

<Accordion title="Suggested reviewers">
  Users can suggest reviewers when they create an Access Request, e.g.,:

  ```bash
  $ tsh request create --roles=dbadmin --reviewers=alice@example.com,ivan@example.com
  ```

  If an Access Request includes suggested reviewers, the email plugin will add
  these to the list of recipients to notify. If a suggested reviewer is an email
  address, the plugin will send a message to that recipient in addition to those
  configured in `role_to_recipients`.
</Accordion>

Configure the email plugin to notify you when a user requests the `editor` role
by adding the following to your `role_to_recipients` config, replacing
`YOUR_EMAIL_ADDRESS` with the appropriate address:

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    [role_to_recipients]
    "*" = "YOUR_EMAIL_ADDRESS"
    "editor" = "YOUR_EMAIL_ADDRESS"
    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    roleToRecipients:
      "*": "YOUR_EMAIL_ADDRESS"
      "editor": "YOUR_EMAIL_ADDRESS"
    ```
  </Tab>
</Tabs>

<Accordion title="Configuring recipients without role mapping">
  If you do not plan to use role-to-recipient mapping, you can configure the
  Teleport email plugin to notify a static list of recipients for every Access
  Request event by using the `delivery.recipients` field:

  <Tabs>
    <Tab title="Executable or Docker">
      ```toml
      [delivery]
      recipients = ["eng@exmaple.com", "dev@example.com"]
      ```
    </Tab>

    <Tab title="Helm Chart">
      ```yaml
      delivery:
        recipients: ["eng@exmaple.com", "dev@example.com"]
      ```
    </Tab>
  </Tabs>

  If you use `delivery.recipients`, you must remove the `role_to_recipients`
  configuration section. Behind the scenes, `delivery.recipients` assigns the
  recipient list to a `role_to_recipients` mapping under the wildcard value `"*"`.
</Accordion>

You configuration should resemble the following:

<Tabs>
  <Tab title="Executable or Docker">
    ```toml
    # /etc/teleport-email.toml
    [teleport]
    addr = "example.com:443"
    identity = "/var/lib/teleport/plugins/email/auth_id"

    [mailgun]
    domain = "sandbox123abc.mailgun.org" 
    private_key = "xoxb-fakekey62b0eac53565a38c8cc0316f6"                                     

    # As an alternative, you can use SMTP server credentials:
    #
    # [smtp]
    # host = "smtp.gmail.com"
    # port = 587
    # username = "username@gmail.com"
    # password = ""
    # password_file = "/var/lib/teleport/plugins/email/smtp_password"

    [delivery]
    sender = "noreply@example.com" 

    [role_to_recipients]
    "*" = "eng@example.com"
    "editor" = ["admin@example.com", "execs@example.com"]

    [log]
    output = "stderr" # Logger output. Could be "stdout", "stderr" or "/var/lib/teleport/email.log"
    severity = "INFO" # Logger severity. Could be "INFO", "ERROR", "DEBUG" or "WARN".
    ```
  </Tab>

  <Tab title="Helm Chart">
    ```yaml
    # teleport-email-helm.yaml
    teleport:
      address: "teleport.example.com:443"
      identitySecretName: teleport-plugin-email-identity

    mailgun:
      domain: "sandbox123abc.mailgun.org" 
      privateKeyFromSecret: "mailgun-private-key"                                     
    # As an alternative, you can use SMTP server credentials:
    #
    # smtp:
    #   host: "smtp.gmail.com"
    #   port: 587
    #   username: "username@gmail.com"
    #   passwordFromSecret: "smtp-password"

    delivery:
      sender: "noreply@example.com" 

    roleToRecipients:
      "*": "eng@example.com"
      "editor": ["admin@example.com", "execs@example.com"]
    ```
  </Tab>
</Tabs>

## Step 6/7. Test the email plugin

After finishing your configuration, you can now run the plugin and test your
email-based Access Request flow:

<Tabs>
  <Tab title="Executable">
    ```bash
    $ teleport-email start
    ```

    If everything works as expected, the log output should look like this:

    ```bash
    $ teleport-email start
    INFO   Starting Teleport Access Email Plugin (): email/app.go:80
    INFO   Plugin is ready email/app.go:101
    ```
  </Tab>

  <Tab title="Docker">
    Start the plugin:

    ```bash
    $ docker run -v <path-to-config>:/etc/teleport-email.toml public.ecr.aws/gravitational/teleport-plugin-email:13.4.16 start
    ```
  </Tab>

  <Tab title="Helm Chart">
    Install the plugin:

    ```bash
    $ helm upgrade --install teleport-plugin-email teleport/teleport-plugin-email --values teleport-email-helm.yaml
    ```

    To inspect the plugin's logs, use the following command:

    ```bash
    $ kubectl logs deploy/teleport-plugin-email
    ```

    Debug logs can be enabled by setting `log.severity` to `DEBUG` in
    `teleport-email-helm.yaml` and executing the `helm upgrade ...` command
    above again. Then you can restart the plugin with the following command:

    ```bash
    $ kubectl rollout restart deployment teleport-plugin-email
    ```
  </Tab>
</Tabs>

### Create an Access Request

<Tabs>
  <Tab title="As an Admin">
    A Teleport admin can create an Access Request for another user with `tctl`:

    ```bash
    $ tctl request create myuser --roles=editor
    ```
  </Tab>

  <Tab title="As a User">
    Users can use `tsh` to create an Access Request and log in with approved roles:

    ```bash
    $ tsh request create --roles=editor
    Seeking request approval... (id: 8f77d2d1-2bbf-4031-a300-58926237a807)
    ```
  </Tab>

  <Tab title="From the Web UI">
    Users can request access using the Web UI by visiting the "Access Requests"
    tab and clicking "New Request":

        <img src="/assets/request-access-989f648dce.png" alt="Creating an Access Request using the Web UI" width="2436" height="1370" />
  </Tab>
</Tabs>

The recipients you configured earlier should receive notifications of the
request by email.

### Resolve the request

Once you receive an Access Request message, click the link to visit Teleport and
approve or deny the request:

<img src="/assets/review-request-a35de046df.png" alt="Reviewing a request" width="2436" height="1370" />

<Accordion title="Reviewing from the command line">
  You can also review an Access Request from the command line:

  <Tabs>
    <Tab title="As an Admin">
      ```bash
      # Replace REQUEST_ID with the id of the request
      $ tctl request approve REQUEST_ID
      $ tctl request deny REQUEST_ID
      ```
    </Tab>

    <Tab title="As a User">
      ```bash
      # Replace REQUEST_ID with the id of the request
      $ tsh request review --approve REQUEST_ID
      $ tsh request review --deny REQUEST_ID
      ```
    </Tab>
  </Tabs>
</Accordion>

## Step 7/7. Set up systemd

This section is only relevant if you are running the Teleport email plugin on a
Linux host.

In production, we recommend starting the Teleport plugin daemon via an init
system like systemd. Here's the recommended Teleport plugin service unit file
for systemd:

```ini
[Unit]
Description=Teleport Email Plugin
After=network.target

[Service]
Type=simple
Restart=on-failure
ExecStart=/usr/local/bin/teleport-email start --config=/etc/teleport-email.toml
ExecReload=/bin/kill -HUP $MAINPID
PIDFile=/run/teleport-email.pid

[Install]
WantedBy=multi-user.target

```

Save this as `teleport-email.service` in either `/usr/lib/systemd/system/` or
another [unit file load
path](https://www.freedesktop.org/software/systemd/man/systemd.unit.html#Unit%20File%20Load%20Path)
supported by systemd.

Enable and start the plugin:

```bash
$ sudo systemctl enable teleport-email
$ sudo systemctl start teleport-email
```
